--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ emailjs.init("UbvNp1oQRJ1Q4appJ");
         <h3> <span> qualification : </span> BCA </h3>
         <h3> <span> post : </span> Web developer </h3>
         <h3> <span> language : </span> English, Hindi, Marathi </h3>
-        <a href="/res/Akash_Desai_Resume.pdf"><button class="btn" onclick=("location.href='/res/Akash_Desai_Resume.pdf';")> download Resume <i class="fas fa-download"></i> </button></a>
+      <button class="btn" onclick=("location.href='/res/Akash_Desai_Resume.pdf';")> download Resume <i class="fas fa-download"></i> </button>
     </div>
 
     <!-- <div class="counter">
