--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-<script type="text/javascript">
-(function() {
-emailjs.init("UbvNp1oQRJ1Q4appJ");
-})();
-</script>
+   
 
 </head>
 <body>
@@ -76,7 +71,7 @@ emailjs.init("UbvNp1oQRJ1Q4appJ");
         <h3> <span> qualification : </span> BCA </h3>
         <h3> <span> post : </span> Web developer </h3>
         <h3> <span> language : </span> English, Hindi, Marathi </h3>
-      <button class="btn" onclick=("location.href='/res/Akash_Desai_Resume.pdf';")> download Resume <i class="fas fa-download"></i> </button>
+     <a href="./res/Akash_Desai_Resume.pdf"> <button class="btn"> download Resume <i class="fas fa-download"></i> </button></a>
     </div>
 
     <!-- <div class="counter">
@@ -169,12 +164,13 @@ emailjs.init("UbvNp1oQRJ1Q4appJ");
 
 <section class="portfolio" id="portfolio">
 
-<h1 class="heading"> my <span>portfolio</span> </h1>
+<h1 class="heading"> my <span>projects</span> </h1>
 
 <div class="box-container">
 
     <div class="box">
        <a href="https://akashdesai-ak.github.io/Excel-Computer/" target="_blank"> <img src="images/pic1.png" alt=""></a>
+       <p>Excel Computers</p>
     </div>
 
     <div class="box">
@@ -183,19 +179,16 @@ emailjs.init("UbvNp1oQRJ1Q4appJ");
 
     <div class="box">
     <a href="https://akashdesai-ak.github.io/Nursery-Website-Template/" target="_blank"> <img src="images/pic3.png" alt=""> </a> 
-    </div>
-
-    <!-- <div class="box">
-        <img src="images/img4.jpg" alt="">
+    </div> 
+    
+    <div class="box">
+    <a href="https://akashdesai-ak.github.io/Two-Wheeler-Dealership-Web_Template/" target="_blank"> <img src="images/pic4.png" alt=""> </a> 
     </div>
 
     <div class="box">
-        <img src="images/img5.jpg" alt="">
-    </div>
-
-    <div class="box">
-        <img src="images/img6.jpg" alt="">
-    </div> -->
+        <a href="https://akashdesai-ak.github.io/Rock-Suzuki-website/" target="_blank"> <img src="images/pic5.png" alt=""> </a> 
+        </div>
+    
 
 </div>
 
@@ -230,7 +223,7 @@ emailjs.init("UbvNp1oQRJ1Q4appJ");
         <input type="email" id="email" placeholder="email" name="email" class="box">
         <input type="text" id="phone" placeholder="Mobile No" name="phone" class="box">
         <textarea name="message" id="message" cols="30" rows="10" class="box message" placeholder="message"></textarea>
-        <button type="submit" name="submit" class="btn" onclick="sendMail()"> send <i class="fas fa-paper-plane"></i> </button>
+      <a href="https://wa.link/dw539t">  <button type="button" name="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button></a>
 
     </form>
 
