--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h3> <span> qualification : </span> BCA </h3>
         <h3> <span> post : </span> Web developer </h3>
         <h3> <span> language : </span> English, Hindi, Marathi </h3>
-     <a href="./res/Akash_Desai_Resume.pdf"> <button class="btn"> download Resume <i class="fas fa-download"></i> </button></a>
+     <a href="https://drive.google.com/file/d/1iaV2lSX3HlGWkuwGAkOntKgj9_5uCz-a/view?usp=sharing"> <button class="btn"> download Resume <i class="fas fa-download"></i> </button></a>
     </div>
 
     <!-- <div class="counter">
