--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 <section class="education" id="education">
 
-<h1 class="heading"> my <span>education</span> </h1>
+<h1 class="heading"><span>Courses</span> </h1>
 
 <div class="box-container">
 
