--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
 
-   
+   <link rel="shortcut icon" href="./images/ad-logo.png" type="image/x-icon">
 
 </head>
 <body onload="loading()">
