--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div id="particles-js" class="particles"></div>
 <section class="home" id="home" >
     <h3>HI THERE !</h3>
-    <h1>I'M <span>Akash Desai</span></h1>
+    <h1>I'M <span class="auto-type"></span></h1>
     <p>An enthusiastic and organized individual seeking an Entry-level position in the field of IT. Motivated individual with in-depth knowledge of languages and development tools, seeking a position in a growth-oriented company where I can use my skills to the advantage of the company while having the scope to develop my own skills.
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
@@ -268,6 +268,17 @@
         preloader.style.display="none";
     }
     
+</script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script>
+    var typed = new Typed(".auto-type",{
+        strings: ["Akash Desai","Web Developer"],
+        typeSpeed:150,
+        backSpeed:150,
+        loop:true
+    })
 </script>
 
 </body>
