--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 </head>
 <body onload="loading()">
 
-    <div id="loader"></div>
+    <figure id="loader">
+        <div></div><div></div>
+        <div></div><div></div>
+        <div></div><div></div>
+        <div></div><div></div>
+      </figure>
     
 <!-- header section starts  -->
 
@@ -40,7 +45,7 @@
     </nav>
 
 </header>
-
+<div id="particles-js" class="particles"></div>
 <!-- header section ends -->
 
 <div id="menu" class="fas fa-bars"></div>
@@ -50,13 +55,13 @@
 
 <!-- home section starts  -->
 
-<div id="particles-js" class="particles"></div>
+
 <section class="home" id="home" >
     <h3>HI THERE !</h3>
     <h1>I'M <span class="auto-type"></span></h1>
     <p>An enthusiastic and organized individual seeking an Entry-level position in the field of IT. Motivated individual with in-depth knowledge of languages and development tools, seeking a position in a growth-oriented company where I can use my skills to the advantage of the company while having the scope to develop my own skills.
     </p>
-    <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
+    <!-- <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a> -->
 
 </section>
 
