--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
 </head>
 <body onload="loading()">
 
-    <figure id="loader">
-        <div></div><div></div>
-        <div></div><div></div>
-        <div></div><div></div>
-        <div></div><div></div>
-      </figure>
+    <div class="loader" id="loader">
+      </div>
     
 <!-- header section starts  -->
 
