--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
 
     </div>
 
-    <form action=""  >
+    <form action="email.php" method="POST"  >
 
         <input type="text" id="name" placeholder="name" name="name" class="box">
         <input type="email" id="email" placeholder="email" name="email" class="box">
-        <input type="text" id="phone" placeholder="Mobile No" name="phone" class="box">
+        <input type="text" id="subject" placeholder="subject" name="subject" class="box">
         <textarea name="message" id="message" cols="30" rows="10" class="box message" placeholder="message"></textarea>
-      <a href="https://wa.me/+919595915522">  <button type="button" name="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button></a>
+    <button type="submit" name="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
 
     </form>
 
